--- a/PyCitySchools/PyCitySchools_starter.ipynb
+++ b/PyCitySchools/PyCitySchools_starter.ipynb
@@ -7,7 +7,10 @@
    "source": [
     "# PyCity Schools Analysis\n",
     "\n",
-    "- Your analysis here\n",
+    "- According to this Data Charter Schools perfomed much higher in all metrics tracked. \n",
+    "The larger schools on average performed lower than the smaller ones. One contributing factor could be the budget per students.\n",
+    "Budget Per Student and Schol size are the most important factors in a schools overall performance.\n",
+    "\n",
     "  \n",
     "---"
    ]
