--- a/PyCitySchools/PyCitySchools_starter.ipynb
+++ b/PyCitySchools/PyCitySchools_starter.ipynb
@@ -7,9 +7,9 @@
    "source": [
     "# PyCity Schools Analysis\n",
     "\n",
-    "- According to this Data Charter Schools perfomed much higher in all metrics tracked. \n",
-    "The larger schools on average performed lower than the smaller ones. One contributing factor could be the budget per students.\n",
-    "Budget Per Student and Schol size are the most important factors in a schools overall performance.\n",
+    "- According to this Data,  Charter Schools perfomed much higher than District Schools in all metrics tracked. \n",
+    "The larger schools on average performed lower than the smaller ones.\n",
+    "Budget Per Student and School Size are the most important factors in a schools overall performance.\n",
     "\n",
     "  \n",
     "---"
